# whatsapp-mcp

./: .golangci.yml  .pre-commit-config.yaml  CLAUDE.md
.github/workflows/: ci.yml  security.yml
docs/: README.md  api-reference.md  architecture.md  mcp-tools.md
whatsapp-bridge/: CLAUDE.md
whatsapp-bridge/api/: openapi.yaml
whatsapp-bridge/pkg/api/: handlers.go
whatsapp-bridge/pkg/config/: config.go
whatsapp-bridge/pkg/database/: models.go  store.go  store_test.go
whatsapp-bridge/pkg/validation/: input.go  input_test.go
whatsapp-mcp-server/: .bandit  pyproject.toml  pytest.ini
whatsapp-mcp-server/src/: __init__.py  api_client.py  config.py  database.py  models.py  validation.py
whatsapp-mcp-server/tests/: __init__.py  conftest.py  test_models.py  test_validation.py
